--- a/template/index.html
+++ b/template/index.html
@@ -15,22 +15,22 @@
 		<section class="wrapper">
 			<input type="text" id="inputBox" readonly>
 			<section id="buttons">
-				<button onclick="appendToInput('7')">7</button>
-				<button onclick="appendToInput('8')">8</button>
-				<button onclick="appendToInput('9')">9</button>
-				<button onclick="appendToInput('/')">/</button>
-				<button onclick="appendToInput('4')">4</button>
-				<button onclick="appendToInput('5')">5</button>
-				<button onclick="appendToInput('6')">6</button>
-				<button onclick="appendToInput('*')">x</button>
-				<button onclick="appendToInput('1')">1</button>
-				<button onclick="appendToInput('2')">2</button>
-				<button onclick="appendToInput('3')">3</button>
-				<button onclick="appendToInput('+')">+</button>
-				<button onclick="appendToInput('0')">0</button>
-				<button onclick="appendToInput('.')">.</button>
-				<button onclick="appendToInput('=')">=</button>
-				<button onclick="appendToInput('-')">-</button>
+				<button >7</button>
+				<button >8</button>
+				<button >9</button>
+				<button class="opr">/</button>
+				<button >4</button>
+				<button >5</button>
+				<button >6</button>
+				<button class="opr">*</button>
+				<button >1</button>
+				<button >2</button>
+				<button >3</button>
+				<button class="opr">+</button>
+				<button >0</button>
+				<button>.</button>
+				<button class="eqBtn">=</button>
+				<button class="opr">-</button>
 			</section>
 		</section>
 
